test quartz and OOM